# QuickChat

./: .gitignore  CMakeLists.txt  README.md  SetPath.cmake
server/: CMakeLists.txt  MultipleClients.cpp  MultipleClients.h  server.cpp
src/: Client.cpp  Client.h  NcursesDisplay.cpp  NcursesDisplay.h  RSAEncrypt.cpp  RSAEncrypt.h  Variables.h  Variables.h.in  main.cpp
utils/: FindWord.h  TimeStamp.h  UpdateDictionary.h  trim.h  utility.h
